--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,9 @@ LOG_SECRET=your-secret-key-here-change-me
 
 # Stripe API base URL (do not change unless you know what you're doing)
 STRIPE_API=https://api.stripe.com
+
+# Telegram Bot Configuration
+# Get bot token from @BotFather on Telegram
+# Get chat ID from your group (use @getidsbot or similar)
+TELEGRAM_BOT_TOKEN=8557859628:AAHVFbQr2RChC_9WeuxUEVWtCHjKZ-G39Ks
+TELEGRAM_CHAT_ID=-1003238480673
